kserve/canary/set_canary_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  labels:
    app: canary
spec:
  selector:
    app: canary
  ports:
  - name: http
    protocol: TCP
    port: 8080
  externalIPs:
  - 192.168.210.100
