kserve/canary/set_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-canary
spec:
  hosts:
    - canary-svc.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: canary-svc.default.svc.cluster.local
        subset: v1
      weight: 20
    - destination:
        host: canary-svc.default.svc.cluster.local
        subset: v2
      weight: 80
